--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,13 @@ button:focus-visible {
   text-align: center;
 }
 
+#navbar {
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
